<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff444444"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/c_bar_bg"
            android:text="@string/tab1"
            android:textColor="@color/tab_word_bg" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#ff949494"
            android:contentDescription="@string/app_name" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/c_bar_bg"
            android:text="@string/tab2"
            android:textColor="@color/tab_word_bg" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#ff949494"
            android:contentDescription="@string/app_name" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/c_bar_bg"
            android:text="@string/tab3"
            android:textColor="@color/tab_word_bg" />
    </LinearLayout>

    <com.jfeinstein.jazzyviewpager.JazzyViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.jfeinstein.jazzyviewpager.JazzyViewPager>

</LinearLayout>